# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-02-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the Go CloudI API to use the cloudi.Source type for the
      erlang.OtpErlangPid type, simplifying package import usage
    * Add Go CloudI API documentation

2017-02-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the Perl, PHP, Python, and Ruby CloudI APIs so count_process_dynamic
      usage is not able to cause external service processes to become
      non-responsive (problem was not observed during testing)
    * Fix CloudI Service API services_update usage with external services
      so updates that do not create a new OS process do update the following
      parameters used by the CloudI API instance:
        * timeout_async (default async timeout value)
        * timeout_sync (default sync timeout value)
        * (default priority value)
        * (request_timeout_adjustment service configuration option value)

2017-02-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the messaging integration test in Go
    * Remove extra nextTick calls within the Javascript CloudI API
    * Fix a possible buffer underrun in the Javascript CloudI API
    * The "command" variable in service request handlers within the
      integration tests that are external services has been changed to be
      "request_type" which is more consistent with other source code and
      helps to distinguish it from the internal "command" variable
    * The GO configure variable now works properly
    * The Go CloudI API is now tested with Go 1.7.5 and all is well
    * Add SubscribeCount test to http_req Go integration test

2017-02-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the null integration test in Go
    * Add the msg_size integration test in Go
    * Now Go errors that use cloudi.StackError have a stack trace in output